--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "noEmit": true,
       "jsx": "react-jsx"
     },
-    "include": ["src"],
+    "include": ["src", "src/@types"],
     "exclude": [
       "node_modules"
     ]
